--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-mcp",
-  "version": "2.28.1",
+  "version": "2.28.2",
   "description": "Integration between n8n workflow automation and Model Context Protocol (MCP)",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -146,6 +146,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.1.5",
+    "form-data": "^4.0.5",
     "lru-cache": "^11.2.1",
     "n8n": "^1.121.2",
     "n8n-core": "^1.120.1",
